--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -28,5 +28,5 @@ jobs:
           git config --global user.email "jbampton@users.noreply.github.com"
           now=$(date)
           git add -A
-          git commit -m "Auto Push on $now"
+          git diff-index --quiet HEAD || git commit -m "Auto Push on $now"
           git push
