--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,7 +1,6 @@
-name: GitHub Self-Updating Repository Demo
+name: lichess
 
 on:
-  # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
   push:
     branches:
       - main
